.DS_Store, __pycache__ -> .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -68,5 +68,11 @@ fabric.properties
 # Sonarlint plugin
 .idea/sonarlint
 
+# Yucky
+.DS_Store
+
+# no cache
+__pycache__
+
 
 # End of https://www.gitignore.io/api/pycharm
