--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,8 @@
     "@types/react": "^17.0.17",
     "@types/react-bootstrap": "^0.32.26",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router": "^5.1.16",
+    "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "babel-eslint": "^10.1.0",
@@ -52,6 +54,8 @@
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-icons": "^1.3.0",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.19.0",
     "webpack-cli": "^4.4.0",
