Add katex and render question

--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest-axe": "^3.5.2",
+    "@types/katex": "^0.11.1",
     "@types/react": "^17.0.17",
     "@types/react-bootstrap": "^0.32.26",
     "@types/react-dom": "^17.0.9",
@@ -49,6 +50,7 @@
     "bootstrap": "^4.6.0",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.1",
+    "katex": "^0.13.18",
     "lodash": "^4.17.20",
     "randomcolor": "^0.6.2",
     "react": "^17.0.1",
