--- a/web/package.json
+++ b/web/package.json
@@ -42,28 +42,23 @@
     "node-fetch": "^2.6.1",
     "source-map-loader": "^3.0.0",
     "ts-loader": "^9.2.5",
-    "typescript": "^4.3.5"
-  },
-  "dependencies": {
-    "@babel/core": "^7.12.10",
-    "babel-loader": "^8.2.2",
-    "bootstrap": "^4.6.0",
-    "css-loader": "^5.0.1",
-    "html-webpack-plugin": "^4.5.1",
-    "katex": "^0.13.18",
-    "lodash": "^4.17.20",
-    "mathlive": "^0.69.6",
-    "randomcolor": "^0.6.2",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.3",
-    "react-bootstrap-icons": "^1.3.0",
-    "react-dom": "^17.0.1",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
+    "typescript": "^4.3.5",
+    "webpack-dev-server": "^3.11.2",
     "style-loader": "^2.0.0",
     "webpack": "^5.19.0",
     "webpack-cli": "^4.4.0",
-    "webpack-dev-server": "^3.11.2"
+    "html-webpack-plugin": "^4.5.1",
+    "@babel/core": "^7.12.10",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1"
+  },
+  "dependencies": {
+    "katex": "^0.13.18",
+    "mathlive": "^0.69.6",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0"
   },
   "eslintConfig": {
     "extends": [
