--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 aniso8601==9.0.1
 antlr4-python3-runtime==4.7.2
+astroid==2.7.3
 click==8.0.1
 Flask==2.0.1
+isort==5.9.3
 itsdangerous==2.0.1
 Jinja2==3.0.1
+lazy-object-proxy==1.6.0
 MarkupSafe==2.0.1
+mccabe==0.6.1
 mpmath==1.2.1
+platformdirs==2.3.0
+pylint==2.10.2
 pytz==2021.1
 six==1.16.0
 sympy==1.8
+toml==0.10.2
 Werkzeug==2.0.1
+wrapt==1.12.1
