--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -30,4 +30,4 @@ jobs:
         run: pip install -r requirements.txt && python -m unittest
 
       - name: Run Pylint
-        run: pylint app/**/*.py
+        run: pylint --rcfile .pylintrc --fail-under 5.75 app/**/*.py
