--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ MarkupSafe==2.0.1
 mccabe==0.6.1
 mpmath==1.2.1
 platformdirs==2.3.0
-pylint==2.10.2
+pylint-fail-under==0.3.0
 pytz==2021.1
 six==1.16.0
 sympy==1.8
