--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "url": "git+https://github.com/odrusso/eduace.git"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-transform-react-jsx": "^7.12.12",
     "@babel/plugin-transform-runtime": "^7.15.0",
@@ -33,25 +34,27 @@
     "@typescript-eslint/parser": "^4.29.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.0.6",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
     "eslint": "^7.19.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.1",
     "jest": "^27.0.6",
     "jest-axe": "^5.0.1",
     "msw": "^0.34.0",
     "node-fetch": "^2.6.1",
+    "node-sass": "^6.0.1",
+    "sass": "^1.39.2",
+    "sass-loader": "^12.1.0",
     "source-map-loader": "^3.0.0",
+    "style-loader": "^2.0.0",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
-    "webpack-dev-server": "^3.11.2",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.19.0",
+    "webpack": "^5.52.0",
     "webpack-cli": "^4.4.0",
-    "html-webpack-plugin": "^4.5.1",
-    "@babel/core": "^7.12.10",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^5.0.1"
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "katex": "^0.13.18",
@@ -91,7 +94,7 @@
   "jest": {
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/mocks/styleMock.js",
-      "\\.(css|less)$": "<rootDir>/src/mocks/styleMock.ts"
+      "\\.(s?css)$": "<rootDir>/src/mocks/styleMock.ts"
     },
     "testEnvironment": "jsdom",
     "setupFilesAfterEnv": [
