Fix jest import

--- a/web/package.json
+++ b/web/package.json
@@ -93,7 +93,7 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/mocks/styleMock.js",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/mocks/styleMock.ts",
       "\\.(s?css)$": "<rootDir>/src/mocks/styleMock.ts"
     },
     "testEnvironment": "jsdom",
