--- a/web/package.json
+++ b/web/package.json
@@ -26,7 +26,6 @@
     "@types/jest-axe": "^3.5.2",
     "@types/katex": "^0.11.1",
     "@types/react": "^17.0.17",
-    "@types/react-bootstrap": "^0.32.26",
     "@types/react-dom": "^17.0.9",
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.1.8",
@@ -57,6 +56,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "katex": "^0.13.18",
     "mathlive": "^0.69.6",
     "react": "^17.0.1",
