--- a/web/package.json
+++ b/web/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "katex": "^0.13.18",
     "mathlive": "^0.69.6",
     "react": "^17.0.1",
