--- a/web/package.json
+++ b/web/package.json
@@ -13,13 +13,8 @@
     "url": "git+https://github.com/odrusso/eduace.git"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-transform-react-jsx": "^7.12.12",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.15.0",
+    "@swc/core": "^1.2.85",
+    "@swc/jest": "^0.2.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -31,9 +26,6 @@
     "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.0.6",
-    "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "eslint": "^7.19.0",
     "eslint-plugin-react": "^7.24.0",
@@ -47,9 +39,8 @@
     "node-sass": "^6.0.1",
     "sass": "^1.39.2",
     "sass-loader": "^12.1.0",
-    "source-map-loader": "^3.0.0",
     "style-loader": "^2.0.0",
-    "ts-loader": "^9.2.5",
+    "swc-loader": "^0.1.14",
     "typescript": "^4.3.5",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.4.0",
@@ -102,8 +93,16 @@
       "./src/setupTests.ts"
     ],
     "testMatch": [
-      "**/src/**/?(*.)+(spec|test).[jt]s?(x)"
-    ]
+      "<rootDir>/**/*.test.{ts,tsx,js,jsx}"
+    ],
+    "transform": {
+      "^.+\\.(t|j)sx?$": [
+        "@swc/jest",
+        {
+          "configFile": ".swcrc"
+        }
+      ]
+    }
   },
   "msw": {
     "workerDirectory": "."
