--- a/web/package.json
+++ b/web/package.json
@@ -13,8 +13,8 @@
     "url": "git+https://github.com/odrusso/eduace.git"
   },
   "devDependencies": {
+    "@swc-node/jest": "^1.3.2",
     "@swc/core": "^1.2.85",
-    "@swc/jest": "^0.2.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -97,10 +97,7 @@
     ],
     "transform": {
       "^.+\\.(t|j)sx?$": [
-        "@swc/jest",
-        {
-          "configFile": ".swcrc"
-        }
+        "@swc-node/jest"
       ]
     }
   },
