--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -31,3 +31,6 @@ jobs:
 
       - name: Run Pylint
         run: pylint-fail-under --rcfile .pylintrc --fail_under 9.75 $(git ls-files --directory app)
+
+      - name: Deploy to Lambda
+        if: github.ref == 'refs/heads/master'
