--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Deploy CDK
         uses: youyo/aws-cdk-github-actions@v2
-#        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master'
         with:
           working_dir: 'infra'
           cdk_subcommand: 'deploy'
