--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -33,9 +33,18 @@ jobs:
           folder: ./web/build
           bucket: ${{ secrets.FRONTEND_S3_BUCKET }}
           bucket-region: ap-southeast-2
-          dist-id: ${{ secrets.CLOUDFRONT_DEPLOYMENT_ID }}
-          invalidation: /*
           delete-removed: true   # We want to remove everything else form the s3 bucket
+
+      # Invalidate Cloudfront (this action)
+      - name: Invalidate CloudFront
+        uses: chetan/invalidate-cloudfront-action@master
+        #        if: github.ref == 'refs/heads/master'
+        env:
+          DISTRIBUTION: ${{ secrets.CLOUDFRONT_DEPLOYMENT_ID }}
+          PATHS: '/*'
+          AWS_REGION: "ap-southeast-2"
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Test Backend
         run: pip install -r requirements.txt && python -m unittest
