--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Deploy frontend assets to S3
         uses: jakejarvis/s3-sync-action@master
-        #        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master'
         with:
           args: --acl public-read --follow-symlinks --delete
         env:
@@ -41,7 +41,7 @@ jobs:
       # Invalidate Cloudfront (this action)
       - name: Invalidate CloudFront
         uses: chetan/invalidate-cloudfront-action@master
-        #        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master'
         env:
           DISTRIBUTION: ${{ secrets.CLOUDFRONT_DEPLOYMENT_ID }}
           PATHS: '/*'
