--- a/web/package.json
+++ b/web/package.json
@@ -54,8 +54,7 @@
     "typescript": "^4.3.5",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.4.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-encoding-plugin": "^0.3.1"
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
