--- a/app/uwsgi.ini
+++ b/app/uwsgi.ini
@@ -5,8 +5,9 @@ gid = www-data
 master = true
 processes = 3
 
-socket = /tmp/uwsgi.socket
 chmod-sock = 664
 vacuum = true
 
 die-on-term = true
+
+http = :5000
