--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -50,6 +50,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Test Backend
+        working-directory: app
         run: pip install -r requirements.txt && python -m unittest
 
       - name: Run Pylint
