--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,4 +5,4 @@ COPY --chown=1 . /app
 
 RUN pip install -r requirements.txt
 
-ENTRYPOINT ["uwsgi", "--ini", "uwsgi.ini"]
+ENTRYPOINT ["gunicorn", "--pythonpath", "/", "-w", "2", "-b", "0.0.0.0:5000", "api:app"]
