--- a/web/package.json
+++ b/web/package.json
@@ -14,13 +14,6 @@
     "url": "git+https://github.com/odrusso/eduace.git"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-transform-react-jsx": "^7.12.12",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.15.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -32,15 +25,11 @@
     "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.0.6",
-    "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "eslint": "^7.19.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.1",
     "jest": "^27.0.6",
     "jest-axe": "^5.0.1",
     "msw": "^0.34.0",
@@ -51,6 +40,8 @@
     "source-map-loader": "^3.0.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.2.5",
+    "ts-jest": "^27.1.2",
+    "ts-loader": "^9.2.6",
     "typescript": "^4.3.5",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.4.0",
@@ -99,6 +90,9 @@
       "\\.(s?css)$": "<rootDir>/src/mocks/styleMock.ts"
     },
     "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.(ts|tsx)?$": "ts-jest"
+    },
     "setupFilesAfterEnv": [
       "./src/setupTests.ts"
     ],
