--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
     "mock": "webpack serve --mode=development --open --hot --env API_HOST=http://localhost:3000 --env MOCK_API=true",
     "mock:prod": "webpack serve --mode=production --open --hot --env API_HOST=http://localhost:3000 --env MOCK_API=true",
     "start": "webpack serve --mode=development --open --hot --env API_HOST=http://localhost:5000 --env MOCK_API=false",
-    "build": "webpack --mode=production --env MOCK_API=false",
+    "build": "webpack --mode=production --env MOCK_API=false && cp index.html build/index.html",
     "test": "jest --passWithNoTests"
   },
   "repository": {
