Update deps and prepare for fargate

--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Deploy CDK
         uses: youyo/aws-cdk-github-actions@v2
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'deploy')
         with:
           working_dir: 'infra'
           cdk_subcommand: 'deploy'
