--- a/infra/package.json
+++ b/infra/package.json
@@ -11,7 +11,7 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.133.0",
+    "@aws-cdk/assert": "1.137.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "jest": "^26.4.2",
@@ -20,18 +20,22 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.133.0",
-    "@aws-cdk/aws-certificatemanager": "^1.133.0",
-    "@aws-cdk/aws-cloudfront": "^1.133.0",
-    "@aws-cdk/aws-cloudwatch": "^1.133.0",
-    "@aws-cdk/aws-iam": "^1.133.0",
-    "@aws-cdk/aws-lambda": "^1.133.0",
-    "@aws-cdk/aws-lambda-python": "^1.133.0",
-    "@aws-cdk/aws-route53": "^1.133.0",
-    "@aws-cdk/aws-route53-targets": "^1.133.0",
-    "@aws-cdk/aws-s3": "^1.133.0",
-    "@aws-cdk/core": "1.133.0",
-    "aws-cdk": "1.133.0",
+    "@aws-cdk/aws-apigateway": "^1.137.0",
+    "@aws-cdk/aws-certificatemanager": "^1.137.0",
+    "@aws-cdk/aws-cloudfront": "^1.137.0",
+    "@aws-cdk/aws-cloudwatch": "^1.137.0",
+    "@aws-cdk/aws-ec2": "^1.137.0",
+    "@aws-cdk/aws-ecr": "^1.137.0",
+    "@aws-cdk/aws-ecs": "^1.137.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "^1.137.0",
+    "@aws-cdk/aws-iam": "^1.137.0",
+    "@aws-cdk/aws-lambda": "^1.137.0",
+    "@aws-cdk/aws-lambda-python": "^1.137.0",
+    "@aws-cdk/aws-route53": "^1.137.0",
+    "@aws-cdk/aws-route53-targets": "^1.137.0",
+    "@aws-cdk/aws-s3": "^1.137.0",
+    "@aws-cdk/core": "1.137.0",
+    "aws-cdk": "1.137.0",
     "source-map-support": "^0.5.16"
   }
 }
