--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -21,3 +21,30 @@ jobs:
 
       - name: Lint
         run: pylint-fail-under --rcfile .pylintrc --fail_under 9.75 $(git ls-files '*.py')
+
+      - name: AWS Auth
+        if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/deploy-api')
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: 'ap-southeast-2'
+
+      - name: ECR Auth
+        if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/deploy-api')
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build and Push image
+        if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/deploy-api')
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ${{ secrets.API_ECR_REPOSITORY }}
+        working-directory: app
+        run: |
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+
+      - name: Redeploy API Service
+        if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/deploy-api')
+        run: aws ecs update-service --cluster ${{ secrets.API_ECS_CLUSTER_ARN }} --service ${{ secrets.API_ECS_SERVICE_NAME }} --force-new-deployment
