--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Build
         working-directory: ./web
-        run: npm run build
+        run: npm run build:prod
 
       - name: Deploy
         uses: jakejarvis/s3-sync-action@master
