--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Wait for deployment
         if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/deploy-api')
-        run: aws ecs services-stable --cluster ${{ secrets.API_ECS_CLUSTER_ARN }} --service ${{ secrets.API_ECS_SERVICE_NAME }}
+        run: aws ecs wait services-stable --cluster ${{ secrets.API_ECS_CLUSTER_ARN }} --service ${{ secrets.API_ECS_SERVICE_NAME }}
 
       - name: Verify deployment version
         if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/deploy-api')
